new RF: get order by id, fix orders model
